--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,8 @@
 {
   "app": {
     "name": "Agora Voting [en]"
+  },
+  "avBooth": {
+    "loadingElectionTitle": "Loading election, please wait.."
   }
 }
