--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,15 @@
     "name": "Agora Voting [en]"
   },
   "avBooth": {
-    "loadingElectionTitle": "Loading election, please wait.."
+    "loadingElectionTitle": "Loading election, please wait..",
+    "stepNumber": "step __num__ of __total__",
+    "startVoting": "Start Voting",
+    "stepsToVote": "You need to follow these steps to cast your ballot:",
+    "selectOptionsTitle": "1. Select your options",
+    "selectOptionsText": "Answer to the election questions one by one as they are shown. This way you will configure your preferences in your ballot.",
+    "reviewOptionsTitle": "2. Review your ballot",
+    "reviewOptionsText": "We will show a summary with the content of your ballot so that you can review it. You'll still be able to change your answers if you want",
+    "encryptAndEmitBallotTitle": "3. Cast your vote",
+    "encryptAndEmitBallotText": "When you proceeed to cast your vote, the voting booth will take some seconds to encrypt it. This way the secrecy of the vote will be preserved. Once the is cast you'll receive a tracker id, that you can use to verify that your ballot was correctly registered."
   }
 }
