adding affix top and working on affixes in general

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name2": "Agora Voting [es]"
+    "name": "Agora Voting"
   },
   "avBooth": {
     "loadingElectionTitle": "Cargando votación, un momento por favor..",
