--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name": "Agora Voting [en]"
+    "name": "Agora Voting"
   },
   "avBooth": {
     "loadingElectionTitle": "Loading election, please wait..",
