--- a/locales/es.json
+++ b/locales/es.json
@@ -6,7 +6,7 @@
     "loadingElectionTitle": "Cargando votación, un momento por favor..",
     "stepNumber": "paso %s de %s",
     "startVoting": "Empezar a votar",
-    "stepsToVote": "Seguirás estos pasos para emitir tu voto:",
+    "stepsToVote": "Seguirás estos pasos al emitir tu voto:",
     "selectOptionsTitle": "1. Selecciona tus opciones",
     "selectOptionsText": "Responde a las preguntas de la votación que se presentan una a una. Configurarás así las preferencias de tu papeleta.",
     "reviewOptionsTitle": "2. Revisa tu papeleta",
