--- a/locales/es.json
+++ b/locales/es.json
@@ -21,7 +21,13 @@
 
     "questionSelectedOptionsTitle": "opciones seleccionadas",
     "questionAvailableOptionsTitle": "opciones disponibles",
-    "noOptionsSelected": "Ninguna opción seleccionada todavía.",
-    "numOptionsLimits": "Selecciona entre __min__ y __max__ opciones."
+    "numOptionsSelected": "Ninguna opción seleccionada todavía.",
+    "numOptionsSelected_plural_1": "1 opción seleccionada",
+    "numOptionsSelected_plural": "__count__ opciones seleccionadas",
+    "numOptionsLimits": "Selecciona entre __min__ y __max__ opciones.",
+    "filterOptionsPlaceholder": "filtrar..",
+    "noResults": "la búsqueda no produjo resultados..",
+    "numSelectedOptionsSmall_plural_1": "1 selecionada",
+    "numSelectedOptionsSmall": "__count__ seleccionadas"
   }
 }
