--- a/locales/es.json
+++ b/locales/es.json
@@ -26,6 +26,8 @@
     "filterOptionsPlaceholder": "filtrar..",
     "noResults": "la búsqueda no produjo resultados..",
     "numSelectedOptionsSmall": "__count__ seleccionadas",
+    "selectMoreOpts": "Debes seleccionar al menos __min__ opciones.",
+    "maxSelectedLimitReached": "No puedes seleccionar más opciones (máximo __max__). Para seleccionar una opción, deselecciona otra primero.",
 
     "removeSelectedItem": "eliminar"
   }
