launch help and highlight when a question needs answer to go next

--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,11 @@
     "selectMoreOpts": "Select at least __min__ options.",
     "maxSelectedLimitReached": "Maximum number of selected options reached (__max__). To select an option, deselect another first.",
 
-    "removeSelectedItem": "remove"
+    "removeSelectedItem": "remove",
+
+    "helpTitle": "Help",
+    "helpText": "",
+    "helpDescription": "<p>This is the description</p>",
+    "goBack": "Go back to booth"
   }
 }
