starting work on cast-ballot-service

--- a/locales/es.json
+++ b/locales/es.json
@@ -43,6 +43,8 @@
     "changeAnswerToQuestion": "cambiar",
     "emptyAnswer": "<sin respuesta>",
 
-    "statusEncryptingQuestion": "Cifrando respuestas a la pregunta __questionNum__ (__percentage__% completado)"
+    "statusEncryptingQuestion": "Cifrando respuestas a la pregunta __questionNum__, por favor espera (__percentage__% completado)",
+    "statusVerifyingQuestion": "Verificando el cifrado de las respuestas a la pregunta __questionNum__, por favor espera (__percentage__% completado)",
+    "sendingBallot": "Enviando la papeleta cifrada al servidor, por favor espera (__percentage__% completado)"
   }
 }
