adding success screen

--- a/locales/en.json
+++ b/locales/en.json
@@ -46,6 +46,9 @@
     "statusExecutingSanityChecks": "Verifying that the web browser is able to encode the ballot, please wait (__percentage__% completed)",
     "statusEncryptingQuestion": "Encrypting answers to question __questionNum__, please wait (__percentage__% completed)",
     "statusVerifyingQuestion": "Verifying the encrypted answers to question __questionNum__, please wait (__percentage__% completed)",
-    "sendingBallot": "Sending the ballot to the server, please wait (__percentage__% completed)"
+    "sendingBallot": "Sending the ballot to the server, please wait (__percentage__% completed)",
+
+    "successTitle": "Vote cast successfully",
+    "successSubheader": "Congratulations, you habe correctly cast your ballot and it's now being kept in our electronic ballot box."
   }
 }
