--- a/locales/es.json
+++ b/locales/es.json
@@ -46,6 +46,9 @@
     "statusExecutingSanityChecks": "Verificando que el navegador es capaz de codificar el voto, por favor espera (__percentage__% completado)",
     "statusEncryptingQuestion": "Cifrando respuestas a la pregunta __questionNum__, por favor espera (__percentage__% completado)",
     "statusVerifyingQuestion": "Verificando el cifrado de las respuestas a la pregunta __questionNum__, por favor espera (__percentage__% completado)",
-    "sendingBallot": "Enviando la papeleta cifrada al servidor, por favor espera (__percentage__% completado)"
+    "sendingBallot": "Enviando la papeleta cifrada al servidor, por favor espera (__percentage__% completado)",
+
+    "successTitle": "Voto emitido con éxito",
+    "successSubheader": "Enhorabuena, has emitido correctamente tu voto y queda custodiado por la urna electrónica."
   }
 }
