--- a/locales/en.json
+++ b/locales/en.json
@@ -32,7 +32,7 @@
     "selectMoreOpts": "Select at least __min__ options.",
     "maxSelectedLimitReached": "Maximum number of selected options reached (__max__). To select an option, deselect another first.",
 
-    "removeSelectedItem": "remove",
+    "removeSelectedItem": "deselect",
 
     "helpTitle": "Help",
     "helpText": "",
