--- a/locales/es.json
+++ b/locales/es.json
@@ -52,7 +52,10 @@
     "successSubheader": "Enhorabuena, has emitido correctamente tu voto y queda custodiado por la urna electrónica.",
 
     "completePacksTitle": "Packs completos",
-    "goToDraftLink": "Ver",
-    "listOfDraftDocuments": "Documentos"
+    "listOfDraftDocuments": "Documentos",
+    "alreadySelectedAPack": "Tienes seleccionado otro pack. Deselecciónalo para poder elegir otro pack.",
+    "optionInCategoryAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección.",
+    "cantSelectNormalOptionPackAlreadySelected": "Para poder elegir una opción, debes primero borrar el pack que seleccionaste.",
+    "cantSelectPackNormalOptionAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección."
   }
 }
