--- a/locales/es.json
+++ b/locales/es.json
@@ -56,6 +56,7 @@
     "alreadySelectedAPack": "Tienes seleccionado otro pack. Deselecciónalo para poder elegir otro pack.",
     "optionInCategoryAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección.",
     "cantSelectNormalOptionPackAlreadySelected": "Para poder elegir una opción, debes primero borrar el pack que seleccionaste.",
-    "cantSelectPackNormalOptionAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección."
+    "cantSelectPackNormalOptionAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección.",
+    "packLabel": "Pack"
   }
 }
