--- a/locales/en.json
+++ b/locales/en.json
@@ -16,8 +16,12 @@
     "encryptAndEmitBallotTitle": "3. Cast your vote",
     "encryptAndEmitBallotText": "When you proceeed to cast your vote, the voting booth will take some seconds to encrypt it. This way the secrecy of the vote will be preserved. Once the is cast you'll receive a tracker id, that you can use to verify that your ballot was correctly registered.",
 
-    "helpTitle": "Oops. Something unexpected happened",
-    "helpHtml": "<p>The following problem occurred: __error__. </p></p>Please contact us and tell us what happened. You can send an email to us at <a href=\"mailto:__email__\" target=\"_blank\">__email__</a>.</p>",
+    "errorTitle": "Oops. Something unexpected happened",
+    "errorHtml": "<p>The following problem occurred: </p><p>__error__</p><p>Please contact us and tell us what happened. You can send an email to us at <a href=\"mailto:__email__\" target=\"_blank\">__email__</a>.</p>",
+    "errorLoadingElection": "Error loading the election. The link you loaded might be invalid, or maybe the server is temporarily unavailable. Try again later or contact us.",
+    "errorLoadingElection": "Error loading the election public keys. The link you loaded might be invalid, or maybe the server is temporarily unavailable. Try again later or contact us.",
+    "errorSendingBallot": "Error sending the ballot.",
+    "errorSendingBallotUnknown": "Unknown error sending the ballot.",
 
     "questionSelectedOptionsTitle": "selected options (__count__)",
     "questionAvailableOptionsTitle": "available options",
