adding your selected options are text to review ballot

--- a/locales/en.json
+++ b/locales/en.json
@@ -41,6 +41,7 @@
     "helpTitle": "Help",
     "helpText": "",
     "goBack": "Go back to booth",
+    "selectedOptionsFollow": "The options you chose are:",
 
     "errorElectionUrl": "The introduced address has an erroneous format",
     "reviewYourBallotTitle": "Review your ballot",
