fix count in i18n en

--- a/locales/en.json
+++ b/locales/en.json
@@ -25,8 +25,7 @@
 
     "questionSelectedOptionsTitle": "selected options (__count__)",
     "questionAvailableOptionsTitle": "available options",
-    "numOptionsSelected_plural_0": "No options selected yet.",
-    "numOptionsSelected": "1 option selected.",
+    "numOptionsSelected": "__count__ options selected.",
     "numOptionsSelected_plural_2": "__count__ options selected.",
     "noOptionsSelected": "No option selected.",
     "numOptionsLimits": "Select between __min__ and __max__ options.",
