--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,7 @@
     "optionInCategoryAlreadySelected": "To be able to select a pack, please deselect any other item",
     "cantSelectNormalOptionPackAlreadySelected": "To be able to select an option, please deselect the pack you chose",
     "cantSelectPackNormalOptionAlreadySelected": "To be able to select a pack, pelase deselect the options you chose",
-    "packLabel": "Pack"
+    "packLabel": "Pack",
+    "accordionCategoryTitle": "Category:"
   }
 }
