--- a/locales/es.json
+++ b/locales/es.json
@@ -50,7 +50,7 @@
     "errorElectionUrl": "La dirección introducida tiene un formato erróneo",
     "reviewYourBallotTitle": "Revisa tu papeleta",
     "reviewYourBallotText": "Antes de emitir tu voto, por favor revisa el contenido de tu papeleta",
-    "encryptAndCastTheBallot": "Cifra y envia el voto",
+    "encryptAndCastTheBallot": "Cifra y envía el voto",
     "changeAnswerToQuestion": "cambiar",
     "emptyAnswer": "<sin respuesta>",
 
