--- a/locales/es.json
+++ b/locales/es.json
@@ -69,7 +69,7 @@
     "optionInCategoryAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección.",
     "cantSelectNormalOptionPackAlreadySelected": "Para poder elegir una opción, debes primero borrar el pack que seleccionaste.",
     "cantSelectPackNormalOptionAlreadySelected": "Para poder elegir un pack, debes primero borrar toda tu selección.",
-    "packLabel": "indivisible",
+    "packLabel": "completo",
     "accordionCategoryTitle": "Categoría:",
 
     "proposalsTitleClickToSelect": "Opciones (clic para seleccionar):",
